<resources>
    <string name="app_name">Swoosh</string>
    <string name="headline_title">GO ALL IN</string>
    <string name="caption_text">ON GOING ALL OUT</string>
    <string name="description_text"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started">Get Started</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Men\'s</string>
    <string name="womens">Women\'s</string>
    <string name="coed">Co-Ed</string>
    <string name="next">Next</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="i_am">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish">Finish</string>
    <string name="search_text">Looking for %1$s %2$s league near you…</string>
</resources>